Ini Commit ketiga dari menu About us #7

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,12 @@
         <activity android:name=".LOGIN" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".TampilanAwal">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity
@@ -38,6 +40,10 @@
         <activity
             android:name=".Lapor"
             android:label="@string/title_activity_lapor"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".StatusLaporan"
+            android:label="@string/title_activity_status_laporan"
             android:theme="@style/AppTheme"></activity>
     </application>
 
