--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
